[package]
name = "cinnabar"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
ckb-types = "0.117.0"
ckb-jsonrpc-types = "0.117.0"
ckb-hash = "0.117.0"
ckb-sdk = "3.3.0"
eyre = "0.6.12"
futures = "0.3.30"
jsonrpc-core = "18.0.0"
hex = "0.4.3"
serde_json = "1.0"

reqwest = { version = "0.12.5", features = ["json"] }
secp256k1 = { version = "0.29", features = ["recovery"] }
