[workspace]
resolver = "2"

members = [
    "calculate",
    "verify",
]

[package]
name = "ckb-cinnabar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
hex = "0.4.3"
serde_json = "1.0"
reqwest = "0.12.5"

ckb-cinnabar-calculator = { path = "calculate" }

clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
