[package]
name = "ckb-cinnabar-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
ckb-always-success-script = "0.0.1"
ckb-types = "0.117.0"
ckb-jsonrpc-types = "0.117.0"
ckb-hash = "0.117.0"
ckb-sdk = "3.3.0"
ckb-chain-spec = "0.117.0"
ckb-traits = "0.117.0"
ckb-script = "0.117.0"
eyre = "0.6.12"
futures = "0.3.30"
jsonrpc-core = "18.0.0"
hex = "0.4.3"
serde_json = "1.0"
rpassword = "7.3.1"
rand = "0.8.5"
molecule = "0.8.0"
lazy_static = "1.5.0"

tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
reqwest = { version = "0.12.5", default_features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
secp256k1 = { version = "0.29", features = ["recovery"] }
